# CV-solo

./: Baseball.cpp  Baseball.h  CMakeLists.txt  Camera.h  HeadTracking.cpp  HeadTracking.h  House.cpp  House.h  Main.cpp  ObjModel.cpp  ObjModel.h  Player.cpp  Player.h  README.md  Singleton.cpp  Singleton.h
models/baseball/: Mooiebal.mtl
models/cottage/: scco.mtl
